# swagger.yml
@@ -220,6 +220,8 @@ definitions:
         type: integer
       name: 
         type: string
+      createdAt:
+        type: string
       startAt:
         type: string
       description:
@@ -236,7 +238,6 @@ definitions:
         type: string
       createdAt:
         type: string
-        format: date-time
       workflow:
         $ref: '#/definitions/Workflow'
       status:
@@ -250,6 +251,8 @@ definitions:
     type: object
     properties:
       id:
+        type: string
+      createdAt:
         type: string
       state:
         type: string
